# shmem

./: CMakeLists.txt  shmemBuildTreeSettings.cmake.in  shmemConfig.cmake.in  shmemConfigVersion.cmake.in
shmem/: CMakeLists.txt  config.h.in  shmem.cpp  shmem.h
test_shmem/: CMakeLists.txt  test_shmem.cpp
